--- a/Froggies.Web/Froggies.Web.csproj
+++ b/Froggies.Web/Froggies.Web.csproj
@@ -10,4 +10,16 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Areas\Auth\Register\" />
+    <Folder Include="Areas\Root\Components\Editor\" />
+    <Folder Include="Content\img\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="Areas\Root\Components\Game\Default.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+  </ItemGroup>
+
 </Project>
