--- a/Froggies.Web/Froggies.Web.csproj
+++ b/Froggies.Web/Froggies.Web.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TypeScriptToolsVersion>3.2</TypeScriptToolsVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,15 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Areas\Auth\Register\" />
-    <Folder Include="Areas\Root\Components\Editor\" />
     <Folder Include="Content\img\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Update="Areas\Root\Components\Game\Default.cshtml">
-      <Pack>$(IncludeRazorContentInPack)</Pack>
-    </Content>
   </ItemGroup>
 
 </Project>
