--- a/Froggies.Web/tsconfig.json
+++ b/Froggies.Web/tsconfig.json
@@ -1,11 +1,12 @@
-{
+﻿{
+	"buildOnSave": true,
 	"compilerOptions": {
 		"outDir": "./built/",
 		"sourceMap": true,
 		"strict": true,
-		"module": "es2015",
+		"module": "es6",
 		"moduleResolution": "node",
-		"target": "es5",
+		"target": "es6",
 		"experimentalDecorators": true
 	},
 	"include": [
