--- a/Froggies.Web/package.json
+++ b/Froggies.Web/package.json
@@ -3,21 +3,26 @@
 	"name": "froggies.web",
 	"private": true,
 	"scripts": {
-		"build": "webpack"
+		"build": "webpack --mode development"
 	},
 	"dependencies": {
+		"@types/node": "^12.0.3",
 		"css-loader": "^2.1.1",
 		"vue": "^2.5.13",
+		"vue-class-component": "^7.0.1",
+		"vue-draggable": "^2.0.2",
+		"vue-property-decorator": "8.1.1",
 		"vue-router": "3.0.6",
-		"vue-property-decorator": "8.1.1"
+		"vuedraggable": "^2.21.0"
 	},
 	"devDependencies": {
 		"less": "^3.9.0",
 		"less-loader": "^4.1.0",
-		"ts-loader": "^3.5.0",
-		"typescript": "^2.7.2",
-		"vue-loader": "^14.1.1",
-		"vue-template-compiler": "^2.5.13",
-		"webpack": "^3.11.0"
+		"ts-loader": "^5.4.5",
+		"typescript": "^3.5.1",
+		"vue-loader": "^15.7.0",
+		"vue-template-compiler": "^2.6.10",
+		"webpack": "^4.29.6",
+		"webpack-cli": "^3.3.0"
 	}
 }
