--- a/Froggies.Web/package.json
+++ b/Froggies.Web/package.json
@@ -8,6 +8,7 @@
 	"dependencies": {
 		"@types/node": "^12.0.3",
 		"css-loader": "^2.1.1",
+		"style-resources-loader": "^1.2.1",
 		"vue": "^2.5.13",
 		"vue-class-component": "^7.0.1",
 		"vue-draggable": "^2.0.2",
