--- a/Froggies.Web/package.json
+++ b/Froggies.Web/package.json
@@ -3,7 +3,8 @@
 	"name": "froggies.web",
 	"private": true,
 	"scripts": {
-		"build": "webpack --mode development"
+		"build": "webpack --mode development",
+		"dev": "webpack --mode development --watch"
 	},
 	"dependencies": {
 		"@types/node": "^12.0.3",
