--- a/Froggies.Web/package.json
+++ b/Froggies.Web/package.json
@@ -15,7 +15,8 @@
 		"vue-draggable": "^2.0.2",
 		"vue-property-decorator": "8.1.1",
 		"vue-router": "3.0.6",
-		"vuedraggable": "^2.21.0"
+		"vuedraggable": "^2.21.0",
+		"vuex": "^3.1.2"
 	},
 	"devDependencies": {
 		"less": "^3.9.0",
